force-app/main/default/objects/Product2/fields/Product_Hierrarchy_Lvl_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierrarchy_Lvl_3__c</fullName>
    <label>Product Hierarchy Lvl 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal health</fullName>
            </value>
            <value>
                <fullName>AST Automation</fullName>
            </value>
            <value>
                <fullName>AST Rapid</fullName>
            </value>
            <value>
                <fullName>Biochemical ID</fullName>
            </value>
            <value>
                <fullName>Blood Culture Automation</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Consumables</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Instruments</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion Reagents</fullName>
            </value>
            <value>
                <fullName>CDD Cascadion spare parts</fullName>
            </value>
            <value>
                <fullName>Collection and Transport</fullName>
            </value>
            <value>
                <fullName>Core Instruments</fullName>
            </value>
            <value>
                <fullName>Core Other</fullName>
            </value>
            <value>
                <fullName>Culture Media Automation</fullName>
            </value>
            <value>
                <fullName>DCM</fullName>
            </value>
            <value>
                <fullName>ELISA</fullName>
            </value>
            <value>
                <fullName>Environmental Systems</fullName>
            </value>
            <value>
                <fullName>Exent Assays</fullName>
            </value>
            <value>
                <fullName>Exent Instruments</fullName>
            </value>
            <value>
                <fullName>Food testing</fullName>
            </value>
            <value>
                <fullName>Freelite</fullName>
            </value>
            <value>
                <fullName>Hevylite</fullName>
            </value>
            <value>
                <fullName>Immunofluorescence Assays</fullName>
            </value>
            <value>
                <fullName>Immunological ID</fullName>
            </value>
            <value>
                <fullName>Lateral Flow</fullName>
            </value>
            <value>
                <fullName>MAAS</fullName>
            </value>
            <value>
                <fullName>Manual AST</fullName>
            </value>
            <value>
                <fullName>Manual Blood Culture</fullName>
            </value>
            <value>
                <fullName>Method QC</fullName>
            </value>
            <value>
                <fullName>Molecular Controls</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>