force-app/main/default/objects/Product2/fields/Product_image__c.field-meta.xml
<CustomField>
    <fullName>Product_image__c</fullName>
    <label>Product image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>