force-app/main/default/objects/Product2/fields/Product_information__c.field-meta.xml
<CustomField>
    <fullName>Product_information__c</fullName>
    <inlineHelpText>This can contain a hyperlink to product data sheets or support pages</inlineHelpText>
    <label>Product information</label>
    <type>Url</type>
</CustomField>