force-app/main/default/objects/Product2/fields/Required_PM_per_year__c.field-meta.xml
<CustomField>
    <fullName>Required_PM_per_year__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Factory prescribed number of PM visits per year</inlineHelpText>
    <label>Required PM per year</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>