force-app/main/default/objects/Product2/fields/Requires_Counter_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Requires_Counter_Mileage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Counter/Mileage</label>
    <type>Checkbox</type>
</CustomField>