force-app/main/default/objects/Product2/fields/Requires_Firmware__c.field-meta.xml
<CustomField>
    <fullName>Requires_Firmware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Firmware</label>
    <type>Checkbox</type>
</CustomField>