force-app/main/default/objects/Product2/fields/Requires_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Requires_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked product is eligible for PMV</description>
    <label>Requires Maintenance</label>
    <type>Checkbox</type>
</CustomField>