force-app/main/default/objects/Product2/fields/Requires_Software__c.field-meta.xml
<CustomField>
    <fullName>Requires_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Software</label>
    <type>Checkbox</type>
</CustomField>