force-app/main/default/objects/Product2/fields/SAP_Batch_Managed__c.field-meta.xml
<CustomField>
    <fullName>SAP_Batch_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>a throw away field to support a flow until informatica is fixed. will be used by a flow to set the value</description>
    <label>SAP Batch Managed</label>
    <type>Checkbox</type>
</CustomField>