force-app/main/default/objects/Product2/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <formula>IF(TEXT(Family)=&quot;IDD&quot;,SUBSTITUTE(ProductCode, &quot;-&quot;, &quot;&quot;),&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Code</label>
    <type>Text</type>
</CustomField>