force-app/main/default/objects/Product2/fields/SOURCE_ID__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SOURCE ID</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>