force-app/main/default/objects/Product2/fields/Spare_Part_Positions__c.field-meta.xml
<CustomField>
    <fullName>Spare_Part_Positions__c</fullName>
    <label>Spare Part Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>