force-app/main/default/objects/Product2/fields/Spare_Parts_Positions_Available__c.field-meta.xml
<CustomField>
    <fullName>Spare_Parts_Positions_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether there are Spare Part Positions related to the Product.</description>
    <inlineHelpText>Indicates whether there are Spare Part Positions related to this product.</inlineHelpText>
    <label>Spare Parts Positions Available</label>
    <type>Checkbox</type>
</CustomField>