force-app/main/default/objects/Product2/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Dependent Fields: 
&apos;HMD Comp Buckets&apos; on Opportunity Product</description>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3M FALL PROTECTION</fullName>
            </value>
            <value>
                <fullName>ABAXIS</fullName>
            </value>
            <value>
                <fullName>ABBOTT DIAGNOSTICS DIVISION</fullName>
                <color>#009900</color>
                <label>ABBOTT DIAGNOSTICS DIVISION</label>
            </value>
            <value>
                <fullName>Abbott Rapid Diagnostics (Alere)</fullName>
            </value>
            <value>
                <fullName>ABBOTT RAPID DX NA (BINAX)</fullName>
            </value>
            <value>
                <fullName>AB Sciex</fullName>
            </value>
            <value>
                <fullName>Accelerate Diagnostics</fullName>
            </value>
            <value>
                <fullName>ACCRIVA</fullName>
            </value>
            <value>
                <fullName>ACCUFORM</fullName>
            </value>
            <value>
                <fullName>ACE GLASS INC</fullName>
            </value>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>ADVANCED INSTRUMENTS</fullName>
            </value>
            <value>
                <fullName>ADVANCE TABCO</fullName>
            </value>
            <value>
                <fullName>AIR BOSS DEFENSE</fullName>
            </value>
            <value>
                <fullName>AIRCLEAN SYSTEMS</fullName>
            </value>
            <value>
                <fullName>AKERS</fullName>
            </value>
            <value>
                <fullName>AK LTD</fullName>
            </value>
            <value>
                <fullName>ALCOR SCIENTIFIC</fullName>
            </value>
            <value>
                <fullName>ALPHAPROTECH</fullName>
            </value>
            <value>
                <fullName>ALSICO HI TEC</fullName>
            </value>
            <value>
                <fullName>AMETEK POWERVAR</fullName>
            </value>
            <value>
                <fullName>Ammex</fullName>
            </value>
            <value>
                <fullName>ANSELL</fullName>
            </value>
            <value>
                <fullName>Ansell - Microflex MidKnight</fullName>
            </value>
            <value>
                <fullName>Ansell - Microflex UltraSense</fullName>
            </value>
            <value>
                <fullName>APOC</fullName>
            </value>
            <value>
                <fullName>ARDx (FORMERLY ALERE)</fullName>
            </value>
            <value>
                <fullName>ARKRAY</fullName>
            </value>
            <value>
                <fullName>ARLINGTON SCIENTIFIC</fullName>
            </value>
            <value>
                <fullName>ASPEN SURGICAL PRODUCTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>