force-app/main/default/objects/Product2/fields/SVMX_ERP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMX_ERP_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>ERP Product ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>