force-app/main/default/objects/Product2/fields/SVMX_ERP_Return_Flag__c.field-meta.xml
<CustomField>
    <fullName>SVMX_ERP_Return_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Return Flag</label>
    <type>Checkbox</type>
</CustomField>