force-app/main/default/objects/Product2/fields/SVMX_Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Product_Line_Text__c</fullName>
    <formula>TEXT(SVMXC__Product_Line__c)</formula>
    <label>Product Line Text</label>
    <type>Text</type>
</CustomField>