force-app/main/default/objects/Product2/fields/SVMX_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Product_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SDG_SPARE</fullName>
            </value>
            <value>
                <fullName>SDG_INSTR</fullName>
            </value>
            <value>
                <fullName>SDG_SERVI</fullName>
            </value>
            <value>
                <fullName>SDG_CONTR</fullName>
            </value>
            <value>
                <fullName>SDG_REAGT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>