force-app/main/default/objects/Product2/fields/SVMX_Requires_Decontamination__c.field-meta.xml
<CustomField>
    <fullName>SVMX_Requires_Decontamination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Decontamination</label>
    <type>Checkbox</type>
</CustomField>