force-app/main/default/objects/Product2/fields/SVMX_UDI_Number__c.field-meta.xml
<CustomField>
    <fullName>SVMX_UDI_Number__c</fullName>
    <description>Device identifier (DI), a mandatory, fixed portion of a UDI that identifies the labeler and the specific version or model of a device. Also known as GTIN</description>
    <inlineHelpText>Device identifier (DI), a mandatory, fixed portion of a UDI that identifies the labeler and the specific version or model of a device. Also known as GTIN</inlineHelpText>
    <label>UDI Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>