force-app/main/default/objects/Product2/fields/SVMXC__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Line__c</fullName>
    <description>Product Line is another way to classify your products (similar to product family). Typically Product Line applies to a broader group and product family to a specific set of products within a product line.</description>
    <inlineHelpText>Product Line is another way to classify your products (similar to product family).</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Tissue Processor</fullName>
            </value>
            <value>
                <fullName>Embedding</fullName>
            </value>
            <value>
                <fullName>Cryotomes</fullName>
            </value>
            <value>
                <fullName>Stainer</fullName>
            </value>
            <value>
                <fullName>Coverslipping</fullName>
            </value>
            <value>
                <fullName>Centrifuge</fullName>
            </value>
            <value>
                <fullName>Labelling &amp; Tracking</fullName>
            </value>
            <value>
                <fullName>Mortuary</fullName>
            </value>
            <value>
                <fullName>Microtomes</fullName>
            </value>
            <value>
                <fullName>APD-Other</fullName>
            </value>
            <value>
                <fullName>APD-all</fullName>
            </value>
            <value>
                <fullName>CDD-all</fullName>
            </value>
            <value>
                <fullName>Kryptor</fullName>
            </value>
            <value>
                <fullName>Konelab/Arena/Aquakem</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Gallery Plus</fullName>
            </value>
            <value>
                <fullName>Indiko</fullName>
            </value>
            <value>
                <fullName>Indiko Plus</fullName>
            </value>
            <value>
                <fullName>Beermaster</fullName>
            </value>
            <value>
                <fullName>Phadia 100</fullName>
            </value>
            <value>
                <fullName>Phadia 250</fullName>
            </value>
            <value>
                <fullName>Phadia 1000</fullName>
            </value>
            <value>
                <fullName>Phadia 2500/5000</fullName>
            </value>
            <value>
                <fullName>Phadia ISAC</fullName>
            </value>
            <value>
                <fullName>Phadia all</fullName>
                <label>Phadia A-la-Carte</label>
            </value>
            <value>
                <fullName>DSX/DS2</fullName>
            </value>
            <value>
                <fullName>IDD-all</fullName>
            </value>
            <value>
                <fullName>IDD-Other</fullName>
            </value>
            <value>
                <fullName>Water systems</fullName>
            </value>
            <value>
                <fullName>MBD-all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>