force-app/main/default/objects/Product2/fields/SVMXC__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product_Type__c</fullName>
    <description>Picklist values here will be matched with similar field in Custom Coverage object to find applicable coverage</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>LABOR</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>