force-app/main/default/objects/Product2/fields/SVMXC__Replacement_Available__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Replacement_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</description>
    <inlineHelpText>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</inlineHelpText>
    <label>Replacement Available?</label>
    <type>Checkbox</type>
</CustomField>