force-app/main/default/objects/Product2/fields/SVMXC__SM_End_of_Service_Life__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_End_of_Service_Life__c</fullName>
    <description>Services will not be provided from this date.</description>
    <inlineHelpText>Services will not be provided from this date.</inlineHelpText>
    <label>End of Service Life</label>
    <type>Date</type>
</CustomField>