force-app/main/default/objects/Product2/fields/SVMXC__SM_Expected_Margin__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Expected_Margin__c</fullName>
    <description>Set the expected margin for this product</description>
    <inlineHelpText>Set the expected margin for this product</inlineHelpText>
    <label>Expected Margin %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>