force-app/main/default/objects/Product2/fields/SVMXC__SM_Expected_Uptime__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Expected_Uptime__c</fullName>
    <description>Set the uptime for the product</description>
    <inlineHelpText>Set the uptime for the product</inlineHelpText>
    <label>Expected Uptime</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>