force-app/main/default/objects/Product2/fields/SVMXC__SM_Life_Expectancy__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Life_Expectancy__c</fullName>
    <description>This field is to capture the duration for how long the product is designed to function under normal conditions.</description>
    <inlineHelpText>This field is to capture the duration for how long the product is designed to function under normal conditions.</inlineHelpText>
    <label>Life Expectancy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>