force-app/main/default/objects/Product2/fields/SVMXC__SM_Life_Expectancy_Unit__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Life_Expectancy_Unit__c</fullName>
    <description>The unit for the Life Expectancy of the product.</description>
    <inlineHelpText>The unit for the Life Expectancy of the product.</inlineHelpText>
    <label>Life Expectancy Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXC__Unit_of_Time</valueSetName>
    </valueSet>
</CustomField>