force-app/main/default/objects/Product2/fields/SVMXC__SM_Part_Procurable__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Part_Procurable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Procurable part</description>
    <inlineHelpText>Procurable part</inlineHelpText>
    <label>Part Procurable</label>
    <type>Checkbox</type>
</CustomField>