force-app/main/default/objects/Product2/fields/SVMXC__SM_Part_Repairable__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Part_Repairable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Repairable part</description>
    <inlineHelpText>Repairable part</inlineHelpText>
    <label>Part Repairable</label>
    <type>Checkbox</type>
</CustomField>