force-app/main/default/objects/Product2/fields/SVMXC__SM_Start_of_Service_Life__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Start_of_Service_Life__c</fullName>
    <description>Date when service life of Product commences</description>
    <inlineHelpText>Date when service life of Product commences</inlineHelpText>
    <label>Start of Service Life</label>
    <type>Date</type>
</CustomField>