force-app/main/default/objects/Product2/fields/SVMXC__Stockable__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Stockable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</description>
    <inlineHelpText>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</inlineHelpText>
    <label>Stockable</label>
    <type>Checkbox</type>
</CustomField>