force-app/main/default/objects/Product2/fields/SVMXC__Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Unit_Of_Measure__c</fullName>
    <description>Unit of measure for this product</description>
    <inlineHelpText>Unit of measure for this product</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Dozen</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Gallon</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Kilogram</fullName>
            </value>
            <value>
                <fullName>Liter</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Ton</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>