force-app/main/default/objects/Product2/fields/System_Uptime_All_Time__c.field-meta.xml
<CustomField>
    <fullName>System_Uptime_All_Time__c</fullName>
    <label>System Uptime (All Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>