force-app/main/default/objects/Product2/fields/System_Uptime_L90D__c.field-meta.xml
<CustomField>
    <fullName>System_Uptime_L90D__c</fullName>
    <label>System Uptime (L90D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>