force-app/main/default/objects/Product2/fields/TF_cfilter__c.field-meta.xml
<CustomField>
    <fullName>TF_cfilter__c</fullName>
    <formula>TEXT(TF_Country__c)+ &quot;-&quot; + TEXT(Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cfilter</label>
    <type>Text</type>
</CustomField>