force-app/main/default/objects/Product2/fields/TF_Manufacturer_code__c.field-meta.xml
<CustomField>
    <fullName>TF_Manufacturer_code__c</fullName>
    <externalId>true</externalId>
    <label>Manufacturer code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>