force-app/main/default/objects/Product2/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <description>MBD Unit of Measure field. Maps to BUn in SAP</description>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bottles</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Cartridges</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Kits</fullName>
            </value>
            <value>
                <fullName>Metres</fullName>
            </value>
            <value>
                <fullName>Millilitre</fullName>
            </value>
            <value>
                <fullName>Million</fullName>
            </value>
            <value>
                <fullName>Packs</fullName>
            </value>
            <value>
                <fullName>Plate(s)</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
            <value>
                <fullName>Vials</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>BOT</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>DRM</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>